# crud_graphql

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: database.py  main.py  models.py
