[tool.poetry]
name = "crud-graphql"
version = "0.1.0"
description = ""
authors = ["Racovet Dorin <racovetdorin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"
graphene = "^3.2.2"
graphql-core = "^3.2.3"
starlette = "^0.27.0"
starlette-graphene3 = "^0.6.0"
mongomock-motor = "^0.0.21"
motor = "^3.2.0"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
